crates/skribble_css/src/generate/snapshots/skribble_css__generate__css__tests__generate_css_from_simplest_atoms.snap
---
source: crates/skribble_css/src/generate/css.rs
assertion_line: 381
expression: output
---
.p\:\:\[10px\] {
  padding: 10px;
}

.py\:\:\$1 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.px\:\:\$px {
  padding-right: 1px;
  padding-left: 1px;
}

