crates/skribble_css/src/generate/snapshots/skribble_css__generate__css__tests__media_queries.snap
---
source: crates/skribble_css/src/generate/css.rs
assertion_line: 388
expression: output
---
@media print {
  .print\:px\:\:\$px {
    padding-right: 1px;
    padding-left: 1px;
  }
}

