crates/skribble_css/src/generate/snapshots/skribble_css__generate__css__tests__media_queries_css_variables.snap
---
source: crates/skribble_css/src/generate/css.rs
assertion_line: 398
expression: output
---
:root {
  --color-text-media: rgba(113, 113, 122, var(--sk-text-opacity));
}

@media print {
  :root {
    --color-text-media: rgba(24, 24, 27, var(--sk-text-opacity));
  }

  .print\:text\:\:\$media {
    --sk-text-opacity: 1;
    color: var(--color-text-media);
  }
}

