crates/skribble_css/src/generate/snapshots/skribble_css__generate__css__tests__media_queries_with_breakpoint.snap
---
source: crates/skribble_css/src/generate/css.rs
assertion_line: 393
expression: output
---
@media (min-width: 768px) {
  @media print {
    .md\:print\:px\:\:\$px {
      padding-right: 1px;
      padding-left: 1px;
    }
  }
}

